# manganova.api

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
src/: __init__.py  __main__.py  _lifespan.py  _translator.py  _types.py  _utils.py  _version.py  settings.py
src/core/: crypt.py  router.py  validators.py
src/core/contexts/: aws_s3.py  postgresql.py
src/exceptions/: bad_request.py  base.py  conflict.py  not_found.py  unauthorized.py
src/locales/en/: translations.ftl
src/locales/pt/: translations.ftl
src/middlewares/: language.py
src/modules/: _rating_dto.py  router.py
src/modules/auth/: controller.py  dtos.py  model.py  repository.py  service.py
src/modules/base/: db_context.py  model.py  repository.py  table.py
src/modules/group/: controller.py  dtos.py  repository.py  service.py  table.py
src/modules/rating/: controller.py  dtos.py  model.py  repository.py  service.py  table.py
src/modules/tag/: controller.py  dtos.py  enums.py  model.py  repository.py  service.py  table.py
src/modules/title/: controller.py  dtos.py  enums.py  model.py  repository.py  service.py  table.py
src/modules/user/: controller.py  dtos.py  model.py  repository.py  service.py  table.py
src/modules/user/dtos/: __init__.py
src/modules/user/model/: __init__.py
src/security/: auth.py
