[project]
name = "manganova.api"
description = "MangaNova is an open-source project that provides manga information to users."
authors = [
    { name = "Gabriel Nobrega", email = "gabrieltkdnobrega63@gmail.com" },
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy[asyncio]>=2.0.35",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "psycopg[binary]>=3.2.3",
    "aioboto3>=13.1.1",
    "python-magic>=0.4.27",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/MangaNova/manganova.api"

[project.optional-dependencies]
test = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start.cmd = "uvicorn src.__main__:create_app --factory --host 0.0.0.0 --port 8000"
start.env_file = ".env"

dev.cmd = "uvicorn src.__main__:create_app --factory --reload-dir ./src --reload"
dev.env_file = ".env"

ruffCheck.cmd = "ruff check --fix"
ruffFormat.cmd = "ruff format"
mypyTypecheck.cmd = "mypy"

lint = { composite = ["ruffCheck", "ruffFormat", "mypyTypecheck"] }


[tool.pdm.dev-dependencies]
dev = [
    "commitizen>=3.29.0",
    "ruff>=0.6.7",
    "types-PyJWT>=1.7.1",
    "alembic>=1.13.3",
    "mypy>=1.11.2",
    "types-aioboto3>=13.1.1",
    "awscli-local[ver1]>=0.22.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = ["D", "N803", "ISC001"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.mypy]
files = "src/**/*.py"
